jellyfin-ffmpeg (5.1.2-3) unstable; urgency=medium

  * Add tier option for the QSV HEVC encoder
  * Add fixes for some quirks on DG2 on Windows
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Tue, 26 Oct 2022 20:44:03 +0800

jellyfin-ffmpeg (5.1.2-2) unstable; urgency=medium

  * Add fixes for the invalid modifier on AMD APU
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Sun, 16 Oct 2022 22:36:31 +0800

jellyfin-ffmpeg (5.1.2-1) unstable; urgency=medium

  * New upstream version 5.1.2
  * Enable SVT-AV1 encoder for amd64
  * Remove unneeded assertion from AMF encoder
  * Disable reshape if DOVI require an EL
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 30 Sep 2022 22:35:03 +0800

jellyfin-ffmpeg (5.1.1-2) unstable; urgency=medium

  * Add fixes for VAAPI render node enumeration
  * Pin libva to release and update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Sun, 25 Sep 2022 13:41:31 +0800

jellyfin-ffmpeg (5.1.1-1) unstable; urgency=medium

  * New upstream version 5.1.1
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 2 Sep 2022 15:43:17 +0800

jellyfin-ffmpeg (5.1-2) unstable; urgency=medium

  * Revert Mesa to the last release
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Mon, 15 Aug 2022 19:29:03 +0800

jellyfin-ffmpeg (5.1-1) unstable; urgency=medium

  * New upstream version 5.1
  * Update dependencies

 -- nyanmisaka <nst799610810@gmail.com>  Thu, 28 Jul 2022 12:05:31 +0800

jellyfin-ffmpeg (5.0.1-8) unstable; urgency=medium

  * Add pause support for ffmpeg by using p key.
  * Faster HDR/DoVi tonemap on low-power devices.
  * Add simple anti-aliasing for ocl/cuda tonemap.
  * Update dependencies.

 -- nyanmisaka <nst799610810@gmail.com>  Fri, 1 Jul 2022 01:49:03 +0800

jellyfin-ffmpeg (5.0.1-7) unstable; urgency=medium

  * Switch to single precision fftw, enable neon for arm.
  * Fix the incorrect full to limit color range on DoVi tonemap.
